add more content/images

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@ class: center, middle
 
 # developer community and content manager
 
---
+---
+class: center, middle
 
 # ?????lolwat
+![confused malmutes](public/img/confused.gif)
 
 ---
 class: center, middle
@@ -59,6 +61,8 @@ class: top, left
 
 ## lock down your deps
 # `npm shrinkwrap`
+
+![shrinkwrap](public/img/shrinkwrap.gif)
 
 ---
 class: top, left
