--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ class: center, middle
 class: center, middle
 
 # hi my name is @ag_dubs
+![space invader](public/img/spaceinvader.png)
+![ghost](public/img/ghost.png)
+![dolphin](public/img/dolphin.png)
 
 ---
 class: center, middle
@@ -33,10 +36,17 @@ class: center, middle
 class: center, middle
 
 # if you don't understand how npm works
+![fire](public/img/fire.png)
+![fire](public/img/fire.png)
+![fire](public/img/fire.png)
 
 --
 
-# that's my problem ;)
+# that's my problem
+
+--
+
+![grimacing](public/img/grimacing.png)
 
 ---
 class: center, middle
@@ -53,6 +63,8 @@ class: top left
 - ### knows your deps from node_modules
 - ### knows your repository from git repo
 - ### always adds keys, never deletes
+
+![chick](public/img/chick.png)
 
 ---
 class: top, left
@@ -123,6 +135,17 @@ class: top, left
 - start:        prestart, start, poststart
 - restart:    prerestart, restart, postrestart
     
+---
+class: middle, center
+
+![the more you know](public/img/moreyouknow.jpg)
+
+---
+class: middle, center
+
+# thanks!
+![ghost](public/img/ghost.png)
+
   </textarea>
     <script src="public/remark.js" type="text/javascript">
     </script>
