i dont know image, save page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@ class: center, middle
 # `npm install`
 
 ---
+class: center, middle
+
+![i dont know](public/img/idontknow.jpg)
+
+---
 class: top left
 
 ## create a package.json
@@ -73,6 +78,17 @@ class: top, left
 # `npm init --yes`
 
 ![yes](public/img/yes.gif)
+
+---
+class: top, left
+
+## add deps from the CLI
+# `npm i --save`
+# `npm i --save-dev`
+
+![disk](public/img/disk.png)
+![disk](public/img/disk.png)
+![disk](public/img/disk.png)
 
 ---
 class: top, left
@@ -134,7 +150,21 @@ class: top, left
 - stop:        prestop, stop, poststop
 - start:        prestart, start, poststart
 - restart:    prerestart, restart, postrestart
-    
+ 
+---
+class: middle, center
+
+# scoped packages
+## (fancy way of saying namespaced pacakges!)
+
+---
+class: top, left
+
+## scoped packages
+# `npm i @scope/name`
+
+
+   
 ---
 class: middle, center
 
