--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ class: center, middle
 ---
 class: center, middle
 
-![i dont know](public/img/idontknow.jpg)
+## stuff not everyone knows
+![i dont know](public/img/idontknow.gif)
 
 ---
 class: top left
@@ -163,8 +164,71 @@ class: top, left
 ## scoped packages
 # `npm i @scope/name`
 
+![telescope](public/img/telescope.png)
 
-   
+--
+
+### scoped packages are private by default but you can make them public:
+### `npm publish --access=public`
+
+
+---
+class: middle, center
+
+# npm private modules
+![lock](public/img/lock.png)
+
+--
+
+### (it's recursive! get it? get it?)
+
+--
+
+npmnpmnpmnpmnpmnpmlolololololol
+
+---
+class: top, left
+
+## private modules
+## `npm init --scope=<usrname>`
+
+### Use your private modules side by side with modules from the public registry
+
+![dancers](public/img/dancers.png)
+ 
+---
+class: middle, center
+
+# Managing access is hard...
+![orgs](public/img/orgs.gif)
+
+---
+class: top, left
+
+## npm organizations
+# `npm team`
+
+- ### create teams and add members 
+- ### grant and revoke access to pacakges via scopes
+- ### monitor package access
+
+![team](public/img/team.png)
+
+---
+class: top, left
+
+# npm on-site
+## run your own on-premises npm registry
+### `npm login`
+### ` --registry=http://reg.amazing.com`
+
+![office](public/img/office.png)
+![runner](public/img/runner.png)
+
+--
+
+(get it? run? runner?) 
+
 ---
 class: middle, center
 
@@ -174,7 +238,9 @@ class: middle, center
 class: middle, center
 
 # thanks!
+![space invader](public/img/spaceinvader.png)
 ![ghost](public/img/ghost.png)
+![dolphin](public/img/dolphin.png)
 
   </textarea>
     <script src="public/remark.js" type="text/javascript">
