Fixed two (identical) typos.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ class: top, left
 class: middle, center
 
 # scoped packages
-## (fancy way of saying namespaced pacakges!)
+## (fancy way of saying namespaced packages!)
 
 ---
 class: top, left
@@ -209,7 +209,7 @@ class: top, left
 # `npm team`
 
 - ### create teams and add members 
-- ### grant and revoke access to pacakges via scopes
+- ### grant and revoke access to packages via scopes
 - ### monitor package access
 
 ![team](public/img/team.png)
