--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@ class: center, middle
 ---
 class: center, middle
 
+## http://bit.ly/you-dont-know-npm
+
+---
+class: center, middle
+
 # hi my name is @ag_dubs
 ![space invader](public/img/spaceinvader.png)
 ![ghost](public/img/ghost.png)
