add the offline install thang

--- a/index.html
+++ b/index.html
@@ -99,6 +99,29 @@ class: top, left
 ---
 class: top, left
 
+## npm... global cache?
+# `.npm/`
+## modules are stored in the home directory
+
+### ... but you can't use this offline because it still hits the network
+
+![money](public/img/cash.png)
+
+---
+
+## npm CASH/install offine
+### `npm install --cache-min 999999`
+
+### we should probably just alias this to:
+### `npm install --offline`
+
+![money](public/img/cash.png)
+![money](public/img/cash.png)
+![money](public/img/cash.png)
+
+---
+class: top, left
+
 ## lock down your deps
 # `npm shrinkwrap`
 
