--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ class: top, left
 
 ---
 
-## npm CASH/install offine
+## npm install offline
 ### `npm install --cache-min 999999`
 
 ### we should probably just alias this to:
