add handle and slides to final slide

--- a/index.html
+++ b/index.html
@@ -275,9 +275,13 @@ class: middle, center
 ![the more you know](public/img/moreyouknow.jpg)
 
 ---
-class: middle, center
+class: center, middle
 
 # thanks!
+## `me => @ag_dubs`
+
+## bit.ly/you-dont-know-npm
+
 ![space invader](public/img/spaceinvader.png)
 ![ghost](public/img/ghost.png)
 ![dolphin](public/img/dolphin.png)
