--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@ class: top, left
 class: top, left
 
 ### run scripts
-## `npm test`
-## `npm start`
-## `npm run $anything`
+### `npm test`
+### `npm start`
+### `npm run $anything`
 
 ### Automate CLI workflows, e.g. build steps, migrations
 
