--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@ class: top, left
 ---
 class: top, left
 
+## add deps from the CLI
+# `npm i -S` 
+# `npm i -D` 
+
+![disk](public/img/disk.png)
+![disk](public/img/haircut.png)
+![disk](public/img/disk.png)
+
+---
+class: top, left
+
 ## npm... global cache?
 # `.npm/`
 ## modules are stored in the home directory
